--- a/Css/style.css
+++ b/Css/style.css
@@ -923,18 +923,17 @@ h2 {
   .tittleFooter
 {
   font-weight: bold;
-  width: 60%;
   font-size: 15px;
 }
 
 .wheretofindusFooter {
-  width: 25%;
+  width: 33%;
   font-size: 14px;
   float: left;
 }
 
 .contactusFooter {
-  width: 25%;
+  width: 33%;
   float: left;
   font-size: 14px;
 }
@@ -942,11 +941,11 @@ h2 {
 .openFooter {
   font-size: 14px;
   float: left;
-  width: 25%;
+  width: 33%;
 }
 
 .suporteFooter {
-  width: 25%;
+  width: 33%;
   float: left;
   font-size: 14px;
 }
@@ -958,7 +957,9 @@ h2 {
 
 .CDfooter
 {
-  width: 100%;
+  width: 98%;
+  position: absolute;
+  margin-top: 40%;
 }
 
 .copyright {
@@ -997,6 +998,8 @@ h2 {
     padding-top: 1%;
     vertical-align: middle;
     text-align: center;
+    z-index: 500;
+    border-bottom: solid 1px white;
   }
 
   .logo {
@@ -1044,9 +1047,6 @@ h2 {
     color: gray;
   }
 
-  /* .downBtn {
-  } */
-
   .upBtn {
     visibility: hidden;
   }
@@ -1054,16 +1054,12 @@ h2 {
   .menuText {
     font-size: 20px;
     font-weight: bold;
+    border-bottom: solid 1px white;
   }
 
   .menuText {
     border-bottom: 2px solid #604020;
     visibility: hidden;
-    /* position: fixed; meh? :3*/
-    /*position: -webkit-sticky;
-    position: sticky;
-    top: 0; */
-    /*    ^\_;-;_/^   ^_^  */
     font-weight: bold;
   }
 
@@ -1073,14 +1069,9 @@ h2 {
   }
 
   nav {
-    padding-top: 10%;
     background-color: #604020;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
     text-align: center;
     visibility: hidden;
-    position: absolute;
   }
 
   li {
@@ -1095,11 +1086,12 @@ h2 {
 
   .slideshow {
     width: 100%;
+    height: auto;
   }
 
   .slideshowimgs {
     width: 100%;
-    height: 300px;
+    height: auto;
   }
 
   .news {
@@ -1179,7 +1171,7 @@ h2 {
   .footerBottom {
     padding-left: 1%;
     padding-top: 1%;
-    padding-bottom: 10%;
+    /* padding-bottom: 10%; */
     padding-right: 1%;
     width: 100%;
     background-color: #333;
@@ -1224,7 +1216,10 @@ h2 {
 
 .CDfooter
 {
-  width: 100%;
+  width: 98%;
+  position: absolute;
+  margin-top: 50%;
+  text-align: center;
 }
 
 .copyright {
@@ -1234,7 +1229,7 @@ h2 {
 }
 
 .desendesign {
-  float: right;
+  float: left;
   font-size: 11px;
   color: gray;
 }
