--- a/Css/style.css
+++ b/Css/style.css
@@ -354,14 +354,12 @@ a:hover {
 /*marcas da pagina marcas*/
 
 .marcasGallery {
-  width: 20%;
-  height: 269.8px;
+  width: 100%;
+  
   float: left;
-  background-color: #fff;
-  margin-left: 2.5%;
-  margin-right: 2.5%;
-  margin-bottom: 1%;
-  margin-top: 1%;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  padding-left: 1%;
 }
 
 .marcaGallery {
@@ -395,12 +393,12 @@ a:hover {
 
 .photoWH {
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 .photoWHV {
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 /*End gallery*/
