--- a/Css/style.css
+++ b/Css/style.css
@@ -91,11 +91,7 @@ a {
 
 nav {
   background-color: #604020;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
   text-align: center;
-  border-bottom: 1px solid white;
   z-index: 10;
   visibility: visible;
 }
@@ -1041,17 +1037,18 @@ h2 {
   }
 
   .menuText {
-    border-bottom: 2px solid #604020;
+    border-bottom: 1px solid white;
     visibility: hidden;
     font-weight: normal;
     /* border-top: 1px solid #604020; */
     color: white;
-    background-color: rgb(22, 117, 22);
+    background-color: #604020;
+    padding-top: 2%;
+    padding-bottom: 2%;
   }
 
   .menuText:hover {
-    border-bottom: 2px solid white;
-    color: #fff;
+    border-bottom: 1px solid white;
     font-weight: bold;
   }
 
