--- a/Css/style.css
+++ b/Css/style.css
@@ -67,12 +67,12 @@ a {
 /*menu*/
 
 .menuText {
-  border-top-left-radius: 50%;
+  /* border-top-left-radius: 50%;
   border-top-right-radius: 50%;
-  border-bottom: 2px solid #604020;
-  border-left: 1px solid #604020;
-  border-right: 1px solid #604020;
-  border-top: 1px solid #604020;
+  border-bottom: 2px solid #8a5a30;
+  border-left: 1px solid #8a5a30;
+  border-right: 1px solid #8a5a30;
+  border-top: 1px solid #8a5a30; */
   text-decoration: none;
   color: black;
   font-family: sans-serif;
@@ -82,23 +82,32 @@ a {
   padding-bottom: 1%;
   visibility: visible;
   font-weight: bold;
+  background-color: #8a5a30;
+  margin-bottom: 0.5%;
+  margin-top: 0.5%;
 }
 
 .menuText:hover {
-  border-top-left-radius: 50%;
+  /* border-top-left-radius: 50%;
   border-top-right-radius: 50%;
-  border-bottom: 2px solid white;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%; */
+  /* border-bottom: 2px solid white;
   border-left: 1px solid yellow;
-  border-right: 1px solid yellow;
-  /* border-top: 1px solid white; */
+  border-right: 1px solid yellow; */
   color: white;
-  border-top: 1px solid green;
+  background-color: #a16937;
+  /* border-top: 1px solid green;
+  border-bottom: 1px solid green;
+  border-left: 1px solid green;
+  border-right: 1px solid green;
+  background-color: green; */
 }
 
-.menuText:focus {
+/* .menuText:focus {
   border-bottom: 2px solid #fff;
   color: #fff;
-}
+} */
 
 nav {
   background-color: #604020;
@@ -106,7 +115,7 @@ nav {
   position: sticky;
   top: 0;
   text-align: center;
-  border-bottom: 1px solid white;
+  /* border-bottom: 1px solid white; */
   z-index: 10;
   visibility: visible;
 }
@@ -994,7 +1003,8 @@ h2 {
     padding-top: 1%;
     vertical-align: middle;
     text-align: center;
-    z-index: 500;
+    z-index: 9999999;
+    /* border-bottom: solid 1px white; */
   }
 
   .logo {
@@ -1160,10 +1170,10 @@ h2 {
     height: 300px;
   }
 
-  .marcass {
+  /* .marcass {
     margin-top: -10%;
     padding-bottom: 25%;
-  }
+  } */
 
   /*footer*/
 
