--- a/Css/style.css
+++ b/Css/style.css
@@ -10,6 +10,7 @@
   padding: 0;
   font-family: sans-serif;
   scroll-behavior: smooth;
+  /* background-image: url("background.jpg"); */
 }
 
 a {
@@ -21,7 +22,7 @@ a {
 
 .header {
   justify-content: space-between;
-  background: #604020;
+  background: #4bc726;
 }
 
 /*top*/
@@ -67,12 +68,16 @@ a {
 /*menu*/
 
 .menuText {
+
   /* border-top-left-radius: 50%;
   border-top-right-radius: 50%;
   border-bottom: 2px solid #8a5a30;
   border-left: 1px solid #8a5a30;
   border-right: 1px solid #8a5a30;
   border-top: 1px solid #8a5a30; */
+  /* width: 14,28571428571429%; */
+
+
   text-decoration: none;
   color: black;
   font-family: sans-serif;
@@ -82,12 +87,13 @@ a {
   padding-bottom: 1%;
   visibility: visible;
   font-weight: bold;
-  background-color: #8a5a30;
+  background-color: #c7c226;
   margin-bottom: 0.5%;
   margin-top: 0.5%;
 }
 
 .menuText:hover {
+
   /* border-top-left-radius: 50%;
   border-top-right-radius: 50%;
   border-bottom-left-radius: 50%;
@@ -95,14 +101,21 @@ a {
   /* border-bottom: 2px solid white;
   border-left: 1px solid yellow;
   border-right: 1px solid yellow; */
+
   color: white;
   background-color: #a16937;
+
   /* border-top: 1px solid green;
   border-bottom: 1px solid green;
   border-left: 1px solid green;
   border-right: 1px solid green;
   background-color: green; */
+
 }
+
+/* .navMenu{
+  width: 100%;
+} */
 
 /* .menuText:focus {
   border-bottom: 2px solid #fff;
@@ -110,12 +123,14 @@ a {
 } */
 
 nav {
-  background-color: #604020;
+  background-color: #4bc726;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
   text-align: center;
+
   /* border-bottom: 1px solid white; */
+
   z-index: 10;
   visibility: visible;
 }
@@ -173,6 +188,7 @@ a:hover {
   font-size: 14px;
   text-align: justify;
   font-family: sans-serif;
+  /* background-color: #4bc726; */
 }
 
 .slideshow {
@@ -363,11 +379,11 @@ a:hover {
 
 .marcasGallery {
   width: 100%;
-
   float: left;
   padding-top: 1%;
   padding-bottom: 1%;
   padding-left: 1%;
+  
 }
 
 .marcaGallery {
@@ -383,15 +399,17 @@ a:hover {
 /*gallery*/
 
 .gallery {
-  padding-left: 1%;
+  /* padding-left: 1%; */
   width: 100%;
+  
 }
 
 .photo {
-  width: 33%;
+  width: 33.33%;
   float: left;
   height: 300px;
   overflow: hidden;
+  
 }
 
 .photo:hover .photoWH {
