--- a/Css/style.css
+++ b/Css/style.css
@@ -1,8 +1,6 @@
 /* @import url("https://fonts.googleapis.com/css2?family=Sarabun:wght@200;300&display=swap"); */
 /*rgba(255, 255, 255, 0) transparent*/
-/*Letra roboto não está a funcionar ;-; por isso até resposta postetior ira ser arial*/
-/*Novo verde para testar :3 : #006600*/
-/*Remake nav/menuText etc....  doing it :3 % */
+/*Testar o amarelo dos menuText*/
 
 * {
   box-sizing: border-box;
@@ -10,7 +8,6 @@
   padding: 0;
   font-family: sans-serif;
   scroll-behavior: smooth;
-  /* background-image: url("background.jpg"); */
 }
 
 a {
@@ -88,7 +85,6 @@ a {
   visibility: visible;
   font-weight: bold;
   background-color: #c7c226;
-  margin-bottom: 0.5%;
   margin-top: 0.5%;
 }
 
@@ -184,11 +180,18 @@ a:hover {
 
 /*main*/
 
+.backgroundIMG
+{
+  background-image: url(../Images/background.jpg);
+  background-size: cover;
+}
+
+
 .main {
   font-size: 14px;
   text-align: justify;
   font-family: sans-serif;
-  /* background-color: #4bc726; */
+  background-color: rgba(255, 255, 255, 0.479);
 }
 
 .slideshow {
@@ -207,8 +210,14 @@ a:hover {
 
 .welcome {
   margin-left: 1%;
-  width: 98%;
+  margin-top: 1%;
+  width: 75%;
   text-align: justify;
+  padding-left: 1%;
+  padding-top: 1%;
+  padding-right: 1%;
+  padding-bottom: 1%;
+  border-radius: 40%;
 }
 
 /*searchbar*/
