--- a/Css/style.css
+++ b/Css/style.css
@@ -313,6 +313,9 @@ a:hover {
   color: white;
   margin-left: -1.5%;
   margin-top: 6%;
+  /* border-radius: 50%;
+  padding: 1% 1% 1% 1%;
+  border: solid 3px white; */
 }
 
 .tituloCategoria {
