--- a/Css/style.css
+++ b/Css/style.css
@@ -221,43 +221,47 @@ a:hover {
 
 /*searchbar*/
 
-/* .search {
+.search {
   margin-top: 5%;
+  /* width: 20%; */
   width: 20%;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
+  position: fixed;
   background-color: white;
   z-index: 999999;
-  height: 200px;
-} */
+  height: 10%;
+  border-top: 3px yellow solid;
+  border-right: 3px yellow solid;
+  border-bottom: 3px yellow solid;
+  transition: 2s;
+}
 
 .searchMG {
-  /* padding-left: 5px;
-  padding-top: 5px;
-  padding-right: 5px; */
-
   font-size: 30px;
   vertical-align: middle;
+}
 
-  /* display: none; */
+.searchMG:hover {
+  color: black;
+}
+
+.searchMGS
+{
+  visibility: visible;
+  color: black;
+}
+
+.searchMGS:hover{
+  color: black;
 }
 
 .closeSearch {
   font-size: 30px;
   vertical-align: middle;
-
-  /* position: absolute; */
-  /* display: none; */
-
+  float: right;
   z-index: 99999999;
 }
 
 .closeSearch:hover {
-  color: black;
-}
-
-.searchMG:hover {
   color: black;
 }
 
@@ -269,7 +273,8 @@ a:hover {
   padding-top: 5px;
   border: none;
   margin-left: 8%;
-  display: none;
+  visibility: visible;
+  border: 1px black solid;
 }
 
 .searchBar:focus {
