--- a/Css/style.css
+++ b/Css/style.css
@@ -223,8 +223,6 @@ a:hover {
 
 .search {
   margin-top: 5%;
-  /* width: 20%; */
-  width: 20%;
   position: fixed;
   background-color: white;
   z-index: 999999;
@@ -233,11 +231,15 @@ a:hover {
   border-right: 3px yellow solid;
   border-bottom: 3px yellow solid;
   transition: 2s;
+  width: 20%;
 }
 
 .searchMG {
   font-size: 30px;
+  float: left;
+  position: fixed;
   vertical-align: middle;
+  margin-top: 1%;
 }
 
 .searchMG:hover {
@@ -266,6 +268,7 @@ a:hover {
 }
 
 .searchBar {
+  float: left;
   vertical-align: middle;
   padding-right: 5px;
   padding-left: 4%;
@@ -275,6 +278,7 @@ a:hover {
   margin-left: 8%;
   visibility: visible;
   border: 1px black solid;
+  margin-top: 5%;
 }
 
 .searchBar:focus {
@@ -308,19 +312,12 @@ a:hover {
   margin-top: 1%;
 }
 
-/* .productsCategoriesplaceHolders:hover {
-  background-color: #604020;
-} */
-
 .categoriesIcons {
   font-size: 40px;
   position: absolute;
   color: white;
   margin-left: -1.5%;
   margin-top: 6%;
-  /* border-radius: 50%;
-  padding: 1% 1% 1% 1%;
-  border: solid 3px white; */
 }
 
 .tituloCategoria {
