--- a/Css/style.css
+++ b/Css/style.css
@@ -224,43 +224,50 @@ a:hover {
 .search {
   margin-top: 5%;
   position: fixed;
-  background-color: white;
+  background-color: grey;
   z-index: 999999;
   height: 10%;
-  border-top: 3px yellow solid;
-  border-right: 3px yellow solid;
-  border-bottom: 3px yellow solid;
+  border-top: 4px yellow solid;
+  border-right: 4px yellow solid;
+  border-bottom: 4px yellow solid;
   transition: 2s;
-  width: 20%;
+  width: 0%;
 }
 
 .searchMG {
   font-size: 30px;
   float: left;
   position: fixed;
-  vertical-align: middle;
   margin-top: 1%;
+  margin-left: 1%;
+  z-index: 99999999;
 }
 
 .searchMG:hover {
   color: black;
 }
 
-.searchMGS
+.searchMGSearch
 {
-  visibility: visible;
+  position: fixed;
   color: black;
+  font-size: 30px;
+  margin-top: 1%;
+  margin-left: 1%;
+  /* display: none; */
 }
 
-.searchMGS:hover{
+.searchMGSearch:hover{
   color: black;
 }
 
 .closeSearch {
   font-size: 30px;
-  vertical-align: middle;
+  margin-top: 1%;
   float: right;
   z-index: 99999999;
+  font-size: 50px;
+  margin-right: 2%;
 }
 
 .closeSearch:hover {
@@ -269,16 +276,15 @@ a:hover {
 
 .searchBar {
   float: left;
-  vertical-align: middle;
   padding-right: 5px;
-  padding-left: 4%;
+  padding-left: 5px;
   padding-bottom: 5px;
   padding-top: 5px;
   border: none;
-  margin-left: 8%;
-  visibility: visible;
+  margin-left: 1%;
   border: 1px black solid;
   margin-top: 5%;
+  display: none;
 }
 
 .searchBar:focus {
