--- a/Css/style.css
+++ b/Css/style.css
@@ -236,7 +236,7 @@ a:hover {
 }
 
 .inputs{
-  float: left;
+  /* float: left; */
   padding-left: 0.5%;
   padding-top: 0.5%;
   padding-right: 0.5%;
@@ -249,27 +249,39 @@ a:hover {
 
 .inputName{
   width: 20%;
+  margin-left: 5%;
+  /* margin-right: 5%; */
 }
 
 .inputEmail{
   width: 40%;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 .inputCellphone{
   width: 10%;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 .inputMatter{
-  width: 33%;
+  width: 40%;
+  margin-left: 5%;
+  margin-bottom: 2%;
+  margin-top: 2%;
 }
 
 .inputEnterprise{
-  width: 33%;
+  width: 40%;
+  margin-right: 5%;
 }
 
 .inputMessage{
   width: 90%;
-  height: 300px;
+  height: 100px;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 /*searchbar*/
