--- a/Css/style.css
+++ b/Css/style.css
@@ -284,6 +284,21 @@ a:hover {
   margin-right: 5%;
 }
 
+.textContatosI{
+  margin-left: 5%;
+}
+
+.btnSend{
+  margin-top: 2%;
+  margin-bottom: 2%;
+  margin-left: 45%;
+  margin-right: 45%;
+  padding-left: 0.5%;
+  padding-top: 0.5%;
+  padding-right: 0.5%;
+  padding-bottom: 0.5%;
+}
+
 /*searchbar*/
 
 .search {
