--- a/Css/style.css
+++ b/Css/style.css
@@ -74,13 +74,13 @@ a {
   padding-bottom: 1%;
   visibility: visible;
   font-weight: bold;
-  background-color: #c7c226;
+  background-color: #4bc726;
   margin-top: 0.5%;
 }
 
 .menuText:hover {
   color: white;
-  background-color: #a16937;
+  background-color: #c7c226;
 }
 
 /* .navMenu{
@@ -147,12 +147,10 @@ a:hover {
 
 /*main*/
 
-.backgroundIMG
-{
+.backgroundIMG {
   background-image: url(../Images/background.jpg);
   background-size: cover;
 }
-
 
 .main {
   font-size: 14px;
@@ -175,8 +173,7 @@ a:hover {
   width: 23%;
 }
 
-.newsTabletPhone
-{
+.newsTabletPhone {
   display: none;
 }
 
@@ -190,77 +187,66 @@ a:hover {
   border-radius: 40%;
 }
 
-.tittleContacts{
+.tittleContacts {
   text-align: center;
   font-size: 25px;
   font-weight: bold;
 }
 
-.introContatcs{
+.introContatcs {
   text-align: center;
   font-size: 14px;
 }
 
-.inputs{
+.inputs {
   padding-left: 0.5%;
   padding-top: 0.5%;
   padding-right: 0.5%;
   padding-bottom: 0.5%;
 }
 
-.inputs:focus{
+.inputs:focus {
   outline: none;
 }
 
-.inputName{
+.inputName {
   width: 20%;
   margin-left: 5%;
 }
 
-.inputEmail{
+.inputEmail {
   width: 40%;
   margin-left: 5%;
   margin-right: 5%;
 }
 
-.inputCellphone{
+.inputCellphone {
   width: 10%;
   margin-left: 5%;
   margin-right: 5%;
 }
 
-.inputMatter{
+.inputMatter {
   width: 40%;
   margin-left: 5%;
   margin-bottom: 2%;
   margin-top: 2%;
 }
 
-.inputEnterprise{
+.inputEnterprise {
   width: 40%;
   margin-right: 5%;
 }
 
-.inputMessage{
+.inputMessage {
   width: 90%;
   height: 100px;
   margin-left: 5%;
   margin-right: 5%;
 }
 
-.textContatosI{
+.textContatosI {
   margin-left: 5%;
-}
-
-.btnSend{
-  margin-top: 2%;
-  margin-bottom: 2%;
-  margin-left: 45%;
-  margin-right: 45%;
-  padding-left: 0.5%;
-  padding-top: 0.5%;
-  padding-right: 0.5%;
-  padding-bottom: 0.5%;
 }
 
 /*Searchbar*/
@@ -291,8 +277,7 @@ a:hover {
   color: black;
 }
 
-.searchMGSearch
-{
+.searchMGSearch {
   position: fixed;
   color: black;
   font-size: 30px;
@@ -300,7 +285,7 @@ a:hover {
   margin-left: 1%;
 }
 
-.searchMGSearch:hover{
+.searchMGSearch:hover {
   color: black;
 }
 
@@ -430,13 +415,11 @@ a:hover {
 }
 
 @keyframes scroll {
-  0% 
-  {
+  0% {
     transform: translateX(0%);
   }
 
-  100% 
-  {
+  100% {
     transform: translateX(calc(-100px * 13));
   }
 }
@@ -473,7 +456,6 @@ a:hover {
 .gallery {
   /* padding-left: 1%; */
   width: 100%;
-  
 }
 
 .photo {
@@ -824,7 +806,6 @@ h2 {
     position: sticky;
     top: 0;
     text-align: center;
-    
   }
 
   li {
@@ -852,8 +833,7 @@ h2 {
     margin-left: 2%;
   }
 
-  .searchMGSearch
-  {
+  .searchMGSearch {
     margin-top: 2%;
     margin-left: 2%;
   }
@@ -875,8 +855,7 @@ h2 {
     display: none;
   }
 
-  .newsTablet
-  {
+  .newsTablet {
     display: block;
   }
 
@@ -1014,8 +993,6 @@ h2 {
     width: 50%;
     height: 200px;
   }
-
-  
 
   /*footer*/
 
@@ -1203,8 +1180,7 @@ h2 {
     margin-top: 3%;
   }
 
-  .searchMGSearch
-  {
+  .searchMGSearch {
     margin-top: 3%;
   }
 
@@ -1226,8 +1202,7 @@ h2 {
     display: none;
   }
 
-  .newsTabletPhone
-  {
+  .newsTabletPhone {
     display: block;
   }
 
