--- a/Css/style.css
+++ b/Css/style.css
@@ -147,16 +147,16 @@ a:hover {
 
 /*main*/
 
-.backgroundIMG {
+/* .backgroundIMG {
   background-image: url(../Images/background.jpg);
   background-size: cover;
-}
+} */
 
 .main {
   font-size: 14px;
   text-align: justify;
   font-family: sans-serif;
-  background-color: rgba(255, 255, 255, 0.479);
+  background-color: rgb(255, 255, 255);
 }
 
 .slideshow {
@@ -254,13 +254,13 @@ a:hover {
 .search {
   margin-top: 3%;
   position: fixed;
-  background-color: grey;
+  background-color: rgba(255, 255, 255, 0);
   z-index: 999999;
-  height: 10%;
-  border-top: 4px yellow solid;
-  border-right: 4px yellow solid;
-  border-bottom: 4px yellow solid;
-  transition: 2s;
+  height: 9%;
+  border-top: 1px rgba(0, 0, 0, 0.753) solid;
+  border-right: 1px rgba(0, 0, 0, 0.753) solid;
+  border-bottom: 1px rgba(0, 0, 0, 0.753) solid;
+  transition: 0.5s;
   width: 0%;
 }
 
@@ -289,6 +289,13 @@ a:hover {
   color: black;
 }
 
+.searchBarnMG
+{
+  background-color: white;
+  width: auto;
+  height: auto;
+}
+
 .closeSearch {
   font-size: 30px;
   margin-top: 1%;
@@ -309,7 +316,7 @@ a:hover {
   padding-bottom: 5px;
   padding-top: 5px;
   border: none;
-  margin-left: 1%;
+  margin-left: 3%;
   border: 1px black solid;
   margin-top: 5%;
   display: none;
