--- a/Css/style.css
+++ b/Css/style.css
@@ -201,7 +201,13 @@ a:hover {
 .formContacts
 {
   width: 50%;
-  background-color: red;
+  margin-left: 30%;
+}
+
+.labels
+{
+  float: left;
+  width: 15%;
 }
 
 .inputs {
@@ -218,12 +224,10 @@ a:hover {
 .divInputName
 {
   width: 100%;
-  color: blue;
-  position: relative;
 }
 
 .inputName {
-  width: 20%;
+  width: 40%;
   float: left;
 }
 
@@ -233,7 +237,7 @@ a:hover {
 }
 
 .inputEmail {
-  width: 40%;
+  width: 45%;
   float: left;
 }
 
@@ -243,7 +247,7 @@ a:hover {
 }
 
 .inputCellphone {
-  width: 10%;
+  width: 15%;
   float: left;
 }
 
@@ -260,7 +264,6 @@ a:hover {
 .divInputEnterprise
 {
   width: 100%;
-  background-color: brown;
 }
 
 .inputEnterprise {
