--- a/Css/style.css
+++ b/Css/style.css
@@ -200,7 +200,7 @@ a:hover {
 
 .formContacts
 {
-  width: 50%;
+  width: 40%;
   margin-left: 30%;
 }
 
@@ -227,7 +227,7 @@ a:hover {
 }
 
 .inputName {
-  width: 40%;
+  width: 55%;
   float: left;
 }
 
@@ -237,7 +237,7 @@ a:hover {
 }
 
 .inputEmail {
-  width: 45%;
+  width: 55%;
   float: left;
 }
 
@@ -247,7 +247,7 @@ a:hover {
 }
 
 .inputCellphone {
-  width: 15%;
+  width: 20%;
   float: left;
 }
 
@@ -257,7 +257,7 @@ a:hover {
 }
 
 .inputMatter {
-  width: 40%;
+  width: 55%;
   float: left;
 }
 
@@ -267,7 +267,7 @@ a:hover {
 }
 
 .inputEnterprise {
-  width: 40%;
+  width: 55%;
   float: left;
 }
 
@@ -277,7 +277,7 @@ a:hover {
 }
 
 .inputMessage {
-  width: 90%;
+  width: 100%;
   height: 100px;
   float: left;
 }
@@ -286,6 +286,31 @@ a:hover {
   margin-left: 5%;
 }
 
+.button{
+  float: left;
+  width: auto;
+  padding: 2% 3% 2% 3%;
+  font-size: 20px;
+  border: 1px solid black;
+  background-color: white;
+}
+
+.button:focus
+{
+  outline: none;
+}
+
+.btnSend
+{
+  margin-left: 5%;
+  float: left;
+}
+
+.btnClean
+{
+  margin-right: 5%;
+  float: right;
+}
 /*Searchbar*/
 
 .search {
