--- a/Css/style.css
+++ b/Css/style.css
@@ -543,6 +543,7 @@ a:hover {
 .gallery {
   /* padding-left: 1%; */
   width: 100%;
+  height: auto;
 }
 
 .photo {
@@ -1079,25 +1080,6 @@ footer {
   margin-left: 5%;
 }
 
-/* .button{
-  float: left;
-  width: auto;
-  padding: 2% 3% 2% 3%;
-  font-size: 20px;
-  border: 1px solid black;
-  background-color: white;
-} */
-
-/* .btnSend
-{
-
-}
-
-.btnClean
-{
-  
-} */
-
 /*Form*/
 
   /*footer*/
@@ -1386,21 +1368,22 @@ footer {
 
 .formContacts
 {
-  width: 60%;
-  margin-left: 20%;
+  width: 98%;
+  margin-left: 1%;
+  margin-right: 1%;
 }
 
 .labels
 {
   float: left;
-  width: 22%;
+  width: 20%;
 }
 
 .inputs {
-  padding-left: 0.5%;
-  padding-top: 0.5%;
-  padding-right: 0.5%;
-  padding-bottom: 0.5%;
+  padding-left: 1%;
+  padding-top: 1%;
+  padding-right: 1%;
+  padding-bottom: 1%;
 }
 
 .divInputName
@@ -1409,8 +1392,7 @@ footer {
 }
 
 .inputName {
-  width: 55%;
-  float: left;
+  width: 70%;
 }
 
 .divInputEmail
@@ -1419,8 +1401,7 @@ footer {
 }
 
 .inputEmail {
-  width: 55%;
-  float: left;
+  width: 70%;
 }
 
 .divInputCellphone
@@ -1429,8 +1410,7 @@ footer {
 }
 
 .inputCellphone {
-  width: 20%;
-  float: left;
+  width: 30%;
 }
 
 .divInputMatter
@@ -1439,8 +1419,7 @@ footer {
 }
 
 .inputMatter {
-  width: 55%;
-  float: left;
+  width: 70%;
 }
 
 .divInputEnterprise
@@ -1449,8 +1428,7 @@ footer {
 }
 
 .inputEnterprise {
-  width: 55%;
-  float: left;
+  width: 70%;
 }
 
 .divInputMessage
@@ -1460,31 +1438,11 @@ footer {
 
 .inputMessage {
   width: 100%;
-  height: 100px;
 }
 
 .textContatosI {
   margin-left: 5%;
 }
-
-/* .button{
-  float: left;
-  width: auto;
-  padding: 2% 3% 2% 3%;
-  font-size: 20px;
-  border: 1px solid black;
-  background-color: white;
-} */
-
-/* .btnSend
-{
-
-}
-
-.btnClean
-{
-  
-} */
 
 /*Form*/
 
